--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "express": "^5.1.0",
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
+    "prisma": "^6.16.2",
     "tsup": "^8.5.0",
     "tsx": "^4.20.5",
     "typescript-eslint": "^8.44.1"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.2",
     "dotenv": "^17.2.2",
