--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^6.16.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.2",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
     "jiti": "^2.6.0",
     "typescript": "^5.9.2",
