--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "eslint": "^9.36.0",
     "eslint-plugin-prettier": "^5.5.4",
     "express": "^5.1.0",
@@ -32,6 +33,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
     "jiti": "^2.6.0",
+    "jsonwebtoken": "^9.0.2",
     "typescript": "^5.9.2",
     "zod": "^4.1.11"
   }
