--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "eslint": "^9.36.0",
     "eslint-plugin-prettier": "^5.5.4",
@@ -31,6 +32,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.2",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "jiti": "^2.6.0",
     "jsonwebtoken": "^9.0.2",
