--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
     "lint": "eslint ./src --ext .ts",
-    "lint:fix": "eslint ./src --ext .ts --fix"
+    "lint:fix": "eslint ./src --ext .ts --fix",
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +27,8 @@
     "prisma": "^6.16.2",
     "tsup": "^8.5.0",
     "tsx": "^4.20.5",
-    "typescript-eslint": "^8.44.1"
+    "typescript-eslint": "^8.44.1",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
